SI-24556 Replacing deprecated newInstance method